[436] Expose course visa fields in v3/public api
